encoder dt fixed, rpm smoothing, INA filtering, torque safety, overload latch

--- a/firmware/esp32s3_test/platformio.ini
+++ b/firmware/esp32s3_test/platformio.ini
@@ -1,13 +1,15 @@
-[env:seeed_xiao_esp32c3]
-platform = espressif32
-board = seeed_xiao_esp32c3
+[env:esp32dev]
+platform = espressif32@6.5.0
+board = esp32dev
 framework = arduino
-
-upload_port = /dev/cu.usbmodem1101
-monitor_port = /dev/cu.usbmodem1101
-
 monitor_speed = 115200
+
+upload_port = /dev/tty.usbserial-0001
+monitor_port = /dev/tty.usbserial-0001
+
 
 lib_deps =
   bogde/HX711
   DFRobot/DFRobot_INA219
+  
+  
